<resources>
    <string name="title">我该如何拯救他</string>
    <string name="live_title">世间所有的相遇，都是久别重逢</string>
    <string name="large_text">
        "我的室友阮亦政沉迷赌博和游戏，他固定每天输掉60块钱，还要给游戏疯狂的充钱（还没有变强），我应该如何给他戒赌"
    </string>
    <string name="action_settings">Settings</string>
    <string name="app_name">Cheesesquare</string>

    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>
    <string name="checkin">Checkin</string>

    <string name="menu_night_mode">Night mode</string>
    <string name="menu_night_mode_system">Follow system</string>
    <string name="menu_night_mode_day">Day (always)</string>
    <string name="menu_night_mode_night">Night (always)</string>
    <string name="menu_night_mode_auto">Auto</string>
    <string name="sign_in">Sign in</string>
    <string name="login_text_two">with your Student ID</string>
    <string name="hint_username">Student ID</string>
    <string name="hint_password">Password</string>
    <string name="sign_in_button">Sign In</string>
    <string name="forgot_text">Forgot your App ID or password?</string>
    <string name="create_text">Create an App ID</string>
    <string name="help_info">Now , you can input your student number,please take care , because ths student number is your login ID . </string>

</resources>
